# arq_simulations

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
PhaseStab/Iodine/: I2_atlas_lines_14800-20000.csv  iodine_bx_accurate_fcf.csv  iodine_bx_accurate_strengths.py  iodine_bx_line_list.py  iodine_bx_morse_strengths.py  iodine_specs.ipynb
PhaseStab/Raman noise/: Noise_estimation.ipynb
PhaseStab/Rate_fidelity_calculations/: Simulations.ipynb  one_link.ipynb
PhaseStab/Sam_simulations_rate_fidelity/: Functional Repeater Simulations - Improved.py
