[project]
name = "arq-calculations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rich>=15.0.0",
    "scipy>=1.17.1",
]
